[tool.poetry]
name = "hunting_hawk"
version = "0.1.1"
description = "Export utilities for mediawiki cargo tables"
authors = ["Stefan Kuznetsov <neosloth@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pydantic = "^1.10.2"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
redis = "^4.5.4"
lxml = "^4.9.2"
requests-cache = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.940"
pytest = "^7.1.0"
types-requests = "^2.27.12"
types-redis = "^4.2.2"
python-lsp-server = {extras = ["all"], version = "^1.4.1"}
python-lsp-black = "^1.1.0"
pyls-isort = "^0.2.2"
isort = "^5.10.1"
pylsp-mypy = "^0.5.8"
types-beautifulsoup4 = "^4.11.1"
ruff = "^0.0.262"
lxml-stubs = "^0.4.0"
ipython = "^8.13.0"

[tool.poetry.scripts]
api = "hunting_hawk.web.start:start"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_return_any = true
plugins = [
  "pydantic.mypy"
]

[tool.ruff]
line-length = 120
