[tool.poetry]
name = "hunting_hawk"
version = "0.4.0"
description = "Export utilities for mediawiki cargo tables"
authors = ["Stefan Kuznetsov <neosloth@sent.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^1.10.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
redis = "^5.0.1"
lxml = "^5.1.0"
requests-cache = "^1.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.4"
types-requests = "^2.31.0"
types-redis = "^4.6.0"
python-lsp-server = {version = "^1.9.0"}
python-lsp-black = "^2.0.0"
pyls-isort = "^0.2.2"
isort = "^5.13.2"
pylsp-mypy = "^0.6.8"
types-beautifulsoup4 = "^4.12.0"
ruff = "0.1.12"
lxml-stubs = "^0.5.1"
ipython = "^8.20.0"
python-lsp-ruff = "^2.0.2"

[tool.poetry.scripts]
api = "hunting_hawk.web.start:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_return_any = true
plugins = [
  "pydantic.mypy"
]

[tool.ruff]
line-length = 120
